--- a/.htaccess
+++ b/.htaccess
@@ -48,7 +48,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^bills$ bills.php [L]
 RewriteRule ^bills/([^/]+)/?$ bills.php?billname=$1 [L]
 
-RewriteRule ^leader/([^/]+)/?$ leader.php?itemname=$1 [L]
+RewriteRule ^leaders$ leaders.php [L]
+RewriteRule ^leaders/([^/]+)/?$ leaders.php?leadername=$1 [L]
+
 RewriteRule ^category/([^/]+)/([^/]+) category.php?catname=$1&pg=$2 [L]
 RewriteRule ^category/([^/]+)/?$ category.php?catname=$1  [L]
 
