--- a/.htaccess
+++ b/.htaccess
@@ -51,6 +51,9 @@ RewriteRule ^bills/([^/]+)/?$ bills.php?billname=$1 [L]
 RewriteRule ^committees$ committees.php [L]
 RewriteRule ^committees/([^/]+)/?$ committees.php?committeename=$1 [L]
 
+RewriteRule ^meetings$ meetings.php [L]
+RewriteRule ^meetings/([^/]+)/?$ meetings.php?meetingname=$1 [L]
+
 RewriteRule ^leaders$ leaders.php [L]
 RewriteRule ^leaders/([^/]+)/?$ leaders.php?leadername=$1 [L]
 
